references absolute spacing fixed

--- a/css/jpeg-dealers-retro-desktop.css
+++ b/css/jpeg-dealers-retro-desktop.css
@@ -296,7 +296,7 @@ a {
 }
 
 .popup.is-references1 {
-  left: 15%;
+  left: 20%;
   top: 1%;
 }
 
@@ -309,12 +309,12 @@ a {
 }
 
 .popup.is-references3 {
-  left: 15%;
+  left: 20%;
   top: 61%;
 }
 
 .popup.is-references2 {
-  left: 15%;
+  left: 20%;
   top: 31%;
 }
 
